# RustError

./: .gitignore  README.md
CppWithExceptions/: CMakeLists.txt  main.cpp  mypoint.cpp  mypoint.h
CppWithExpected/: main.cpp  mypoint.cpp  mypoint.h
rust_result/: Cargo.toml
rust_result/src/: lib.rs  main.rs
